# MultiDB-React-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  package-lock.json  pyproject.toml  spec.md
src/: .env.example  config.py
src/DeepEvals/: README.md  golden_cases.json  run_golden_eval.py
src/backend/: agent.py  auth.py  main.py
src/backend/db/: mongo.py  postgres.py
src/backend/tools/: mongo_tool.py  rag_tool.py  sql_tool.py
src/data/: load_handbook.py  load_mongodb.py  mongodb_seed.json  skynova_handbook.txt  verify_connections.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: main.tsx  styles.css
tests/: test_agent_answer_format.py  test_agent_routing.py  test_auth.py  test_cloud_run_deployment.py  test_config.py  test_deepevals_golden_set.py  test_frontend_content.py  test_frontend_serving.py  test_imports.py  test_mongo_tool.py  test_run_golden_eval.py  test_sql_tool.py  test_streaming.py
