[project]
name = "multi-db-react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.10",
    "openai>=2.24.0",
    "pyjwt>=2.10.1",
    "google-auth>=2.40.0",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.17.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]
